TestRepo2/src/objects/Share_cache__c.object
<CustomObject>
    <description>Store information about share history</description>
    <fields>
        <fullName>Content_Name__c</fullName>
        <label>Content Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <label>Content Version Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipients__c</fullName>
        <description>Store information about recipients</description>
        <label>Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Share cache</label>
    <nameField>
        <label>Share cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Share cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>